<resources>
    <string name="app_name">PizzaApp_v2</string>
    <string name="create_btn">Start</string>
    <string name="size_fragment">Size fragment</string>
    <string name="sauze_fragment">Sauze fragment</string>
    <string name="create_fragment">Create fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_create_your_pizza">CREATE YOUR PIZZA</string>
    <string name="tv_total_name">Total price:</string>
    <string name="tv_total_price">0.00</string>
    <string name="tv_size">1. Choose size of pizza:</string>
    <string name="tv_sauce">2. Choose the sauce:</string>

    <string name="btn_back">BACK</string>
    <string name="btn_next">NEXT</string>
    <string name="rb_small">Small(5.00)</string>
    <string name="rb_medium">Medium(7.50)</string>
    <string name="rb_big">Big(10.00)</string>
    <string name="tv_1_3">1 / 3</string>
    <string name="tv_toppings">3. Choose the toppings:</string>
    <string name="topping_name">Topping name</string>
    <string name="name_price">Price...</string>
    <string-array name="saucesText">
        <item>Tomato</item>
        <item>BBQ</item>
        <item>Crème Fraîche</item>
    </string-array>
    <string-array name="saucesPrice">
        <item>2.50</item>
        <item>3.50</item>
        <item>1.50</item>
    </string-array>
    <string name="title_activity_result">ResultActivity</string>
    <string name="txt_finish">FINISH</string>
    <string name="header_toppings">Toppings:</string>
</resources>
