<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_size"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_panel">

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:textColor="#B3ADA7"
                    android:padding="10dp"
                    android:text="@string/tv_size"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="30dp">

                <ImageView
                        android:src="@drawable/pizza_size"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:id="@+id/imageView1"/>
                <ImageView
                        android:src="@drawable/pizza_size"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:id="@+id/imageView2"/>
                <ImageView
                        android:src="@drawable/pizza_size"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_weight="1"
                        android:id="@+id/imageView3"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <RadioButton
                            android:id="@+id/rb_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rb_small"/>
                    <RadioButton
                            android:id="@+id/rb_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rb_medium"/>
                    <RadioButton
                            android:id="@+id/rb_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rb_big"/>
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:id="@+id/bottom_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="#FA7214"
                android:textColor="#FFFFFF"
                android:text="@string/btn_back"/>

        <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="#398FD4"
                android:textColor="#FFFFFF"
                android:text="@string/btn_next"/>

    </LinearLayout>


</RelativeLayout>