<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_panel">

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:textColor="#B3ADA7"
                    android:padding="10dp"
                    android:text="@string/tv_sauce"/>

            <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    tools:context=".activities.MainActivity">

                <GridView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/sauceGrid"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:columnWidth="100dp"
                        android:numColumns="auto_fit"
                        android:verticalSpacing="10dp"
                        android:horizontalSpacing="10dp"
                        android:stretchMode="columnWidth"
                        android:gravity="center"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:id="@+id/bottom_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="#FA7214"
                android:textColor="#FFFFFF"
                android:text="@string/btn_back"/>

        <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="#398FD4"
                android:textColor="#FFFFFF"
                android:text="@string/btn_next"/>

    </LinearLayout>
</RelativeLayout>